Small style improvements - fix rounded corners in message list,  don't show horizontal scroller in contacts list

--- a/skins/larry/mail.css
+++ b/skins/larry/mail.css
@@ -383,11 +383,7 @@ a.iconbutton.threadmode.selected {
 /*** message list ***/
 
 #messagelist thead td:first-child {
-	border-radius: 4px 0 0 0;
-}
-
-#messagelist thead td:last-child {
-	border-radius: 0 4px 0 0;
+	border-radius: 4px 0 0 0; /* for Chrome */
 }
 
 #messagelist tr td.attachment,
